<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Vault</string>
    <string name="menu_footer1">Nymi Password Vault</string>
    <string name="menu_footer2">Version 1.0.0</string>
    <string name="pwd">Password</string>
    <string name="url">Website URL (optional)</string>
    <string name="newPwd">Enter your new password</string>
    <string name="tag">Label (e.g. Google)</string>
    <string name="add">ADD NEW</string>
    <string name="addit">ADD IT!</string>
    <string name="save">SAVE</string>
    <string name="remove">REMOVE</string>
    <string name="remove_option">Remove</string>
    <string name="launchwebsite_option">Launch Website</string>
    <string name="cancel">CANCEL</string>
    <string name="okay">OKAY</string>
    <string name="copy">COPY</string>
    <string name="confirmDeleteMsg">Are you sure you want to remove this password?</string>
    <string name="yes">YEP, THAT\'S MY NYMI BAND!</string>
    <string name="retry">RETRY</string>
    <string name="no">NO, I DON\'T SEE THAT</string>
    <string name="addCredPop">Add Credentials</string>
    <string name="all_pwd">All</string>
    <string name="starred_pwd">Starred</string>
    <string name="banner_text1">PASSWORD VAULT</string>
    <string name="splash_text">Keep your passwords stored in an encrypted vault secured by your own Nymi Band.</string>
    <string name="splash_btn_text">BEGIN SET UP</string>
    <string name="intro_text1">Tap your Nymi Band 4 times to enter Pairing Mode.The lights will blink outwards.</string>
    <string name="discover_failure_text">We can\'t find your Nymi Band. Try tapping more rapidly and make sure your Nymi Band is activated.</string>
    <string name="agree_timeout_text">Agree Timout Occured.Please Try Again.</string>
    <string name="agreement_text">We found a Nymi Band. Let\'s make sure we found the right one.\n\nDoes the pattern below match the lights on your Nymi Band?</string>
    <string name="progress_text">We are searching for your Nymi Band..</string>
    <string name="progress_validation_text">VERIFYING YOUR NYMI BAND</string>
    <string name="progress_failvalidation_text">COULD NOT VERIFY</string>
    <string name="progress_successvalidation_text">VERIFIED</string>
    <string name="prov_progress_text">AUTHORIZING..</string>
    <string name="new_password_text">Your Nymi Band has been authorized.\nYou can now enter your first password!</string>
    <string name="list_footer_text">ADD NEW..</string>
    <string name="alert_text_copied">COPIED!</string>
    <string name="alert_text_pwdremoved">PASSWORD REMOVED!</string>
    <string name="alert_text_pwdchanged">PASSWORD CHANGED!</string>
    <string name="alert_text_pwdclear">PASSWORDS CLEARED!</string>
    <string name="alert_text_unauthorize">NYMI BAND UNAUTHORIZED!</string>
    <string name="copytoclipboard">Copy to Clipboard</string>
    <string name="view_pwd">View Password</string>
    <string name="change_pwd">Change Password</string>
    <string name="clear_pwd">Clear Passwords</string>
    <string name="unauthorize">Unauthorize</string>
    <string name="unauthorizeButton">UNAUTHORIZE</string>
    <string name="unauthorize_text">Are you sure you want to unauthorize your Nymi Band?\n\n Your passwords will be removed and your Nymi Band will no longer be connected to this Password Vault</string>
    <string name="unauthorize_header">Unauthorize Nymi Band</string>
    <string name="options">Options</string>
    <string name="new_pwd">Add New Password</string>
    <string name="all">All Passwords</string>
    <string name="starred">Starred Passwords</string>
    <string name="clear">CLEAR</string>
    <string name="error_header">Uh oh!</string>
    <string name="error_header_oops">Oops</string>
    <string name="error_buttontext">Try Again</string>
    <string name="error_messagetext">Please make sure your Nymi Band is nearby and activated.</string>
    <string name="clear_text">Are you sure you want to clear all your passwords? This cannot be undone.</string>
    <string name="error_taglengthlimit">Label/Tag name should allow up to 50 characters</string>
    <string name="error_pwdlengthlimit">Password should allow up to 50 characters only</string>
    <string name="error_emptytag">Label cannot be empty</string>
    <string name="error_emptypwd">Password cannot be empty</string>
    <string name="error_tagexists1">Label name</string>
    <string name="error_tagexists2">already exists</string>
    <string name="menuname">menuname</string>
    <string name="icon">icon</string>

</resources>