<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_navy"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/splashimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/sidebarlogo" />

    <com.bionym.app.passwordvault.component.CustomTextView
        android:id="@+id/splashtext1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/banner_text1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"/>

    <com.bionym.app.passwordvault.component.CustomTextView
        android:id="@+id/splashtext2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/splash_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/splashbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_orange_button"
        android:text="@string/splash_btn_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />

    <ProgressBar
        android:id="@+id/myProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/my_progress_indeterminate"
        android:visibility="gone" >
    </ProgressBar>

    <ImageView
        android:id="@+id/tickImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/tickimage"
        android:visibility="gone" />

    <com.bionym.app.passwordvault.component.CustomTextView
        android:id="@+id/myTextProgress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/progress_validation_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone" />

    <Button
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_orange_button"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>