<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_bg"
    android:orientation="vertical" >

    <com.bionym.app.passwordvault.component.CustomTextView
        android:id="@+id/popupHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_navy"
        android:ellipsize="end"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/newPwd"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_micro"
        android:visibility="gone" />

    <EditText
        android:id="@+id/url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/url"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_micro"
        android:visibility="gone" />

    <com.bionym.app.passwordvault.component.CustomTextView
        android:id="@+id/remove_header_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/confirmDeleteMsg"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/starred_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_button"
            android:text="@string/cancel"
            android:textColor="@drawable/textcolor_button"
            android:textSize="@dimen/text_size_micro" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@drawable/textcolor_button"
            android:textSize="@dimen/text_size_micro" />
    </LinearLayout>

</LinearLayout>