<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView_addPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/firstpassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:src="@drawable/tickimage" />

                <com.bionym.app.passwordvault.component.CustomTextView
                    android:id="@+id/new_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/new_password_text"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <EditText
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_border"
                android:focusable="true"
                android:hint="@string/tag"
                android:imeOptions="actionNext"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/url"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:id="@+id/starred_pwd_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/cancel"
                    android:textColor="@drawable/textcolor_button"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/addit"
                    android:textColor="@drawable/textcolor_button"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>