<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView_provision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/provisionlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:orientation="vertical" >

                <com.bionym.app.passwordvault.component.CustomTextView
                    android:id="@+id/intro_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/intro_text1"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/nymi_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/nymi_search"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agreelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >

                <com.bionym.app.passwordvault.component.CustomTextView
                    android:id="@+id/agreement_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/agreement_text"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_small" />

                <RelativeLayout
                    android:id="@+id/llPattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ledblank"
                    android:gravity="center_horizontal" >

                    <RadioButton
                        android:id="@+id/RadioButton07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp" />

                    <RadioButton
                        android:id="@+id/RadioButton06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_toEndOf="@id/RadioButton07"
                        android:layout_toRightOf="@id/RadioButton07" />

                    <RadioButton
                        android:id="@+id/RadioButton09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_toEndOf="@id/RadioButton06"
                        android:layout_toRightOf="@id/RadioButton06" />

                    <RadioButton
                        android:id="@+id/RadioButton08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_toEndOf="@id/RadioButton09"
                        android:layout_toRightOf="@id/RadioButton09" />

                    <RadioButton
                        android:id="@+id/RadioButton10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_toEndOf="@id/RadioButton08"
                        android:layout_toRightOf="@id/RadioButton08" />
                </RelativeLayout>

                <Button
                    android:id="@+id/agreement_button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_button"
                    android:focusable="true"
                    android:text="@string/yes"
                    android:textColor="@drawable/textcolor_button"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/agreement_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/no"
                    android:textColor="@drawable/textcolor_button"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <com.bionym.app.passwordvault.component.CustomTextView
                android:id="@+id/myTextProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:text="@string/progress_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/myProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/my_progress_indeterminate"
                android:visibility="gone" >
            </ProgressBar>

            <ImageView
                android:id="@+id/tickImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/tickimage"
                android:visibility="gone" >
            </ImageView>

            <Button
                android:id="@+id/retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:gravity="center_horizontal"
                android:paddingTop="13dp"
                android:text="@string/retry"
                android:textColor="@drawable/textcolor_button"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>